# robot-state-machines

./: .gitmodules  CHANGELOG  CMakeLists.txt  LICENSE  README.md  TODO.md
doc/pick_and_place/: pick_and_place.dot  pick_and_place.rst  pick_and_place.tex
src/: pick_and_place_sm.cpp
src/state_machines/: pick_and_place_sm.hpp
